@@ -1,0 +1,4 @@
+last-generated=2014-08-20
+p2=[1.00000000000000000000, 1.00000000000000000000]
+p1=[0.00000000000000000000, 0.00000000000000000000]
+time=[0.00000000000000000000, 1.00000000000000000000]
